--- a/models/inceptionResNetV2-train-validation-test.ipynb
+++ b/models/inceptionResNetV2-train-validation-test.ipynb
@@ -51,7 +51,7 @@
     "#Create a bottleneck file\n",
     "top_model_weights_path = 'bottleneck_fc_model-inception_resnet_v2.h5' \n",
     "\n",
-    "# loading up our datasets\n",
+    "# path for datasets\n",
     "train_data_dir = 'storage/train'  \n",
     "validation_data_dir = 'storage/valid'\n",
     "test_data_dir = 'storage/test'\n",
@@ -689,7 +689,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
