--- a/models/inceptionV3-train-validation-test.ipynb
+++ b/models/inceptionV3-train-validation-test.ipynb
@@ -38,19 +38,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Default dimensions\n",
+    "#Set default dimensions for model\n",
     "img_width, img_height = 299, 299  \n",
     "   \n",
     "#Create a bottleneck file\n",
     "top_model_weights_path = 'bottleneck_fc_model-inceptionV3.h5' \n",
     "\n",
-    "# loading up our datasets\n",
+    "#path for datasets\n",
     "train_data_dir = 'storage/train'  \n",
     "validation_data_dir = 'storage/valid'\n",
     "test_data_dir = 'storage/test'\n",
     "   \n",
     "# number of epochs to train top model  \n",
-    "epochs = 15 #this has been changed after multiple model run  \n",
+    "epochs = 50\n",
+    "\n",
     "# batch size used by flow_from_directory and predict_generator  \n",
     "batch_size = 50"
    ]
@@ -538,7 +539,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
